# rancid-verifier

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
rancid_verifier/: cli.py  main.py
tests/: test_cli.py  test_get_files.py  test_veryfy.py
tests/fixtures/router_db_files/: router_db_ascii.txt  router_db_cp1251.txt  router_db_utf8.txt
